@@ -1,5 +1,8 @@
 This file documents the revision history for the SNClient+ agent.
 
+next:
+         - fix check_mount checking options
+
 0.21     Thu Mar 28 17:18:25 CET 2024
          - add http config ini includes
          - add osx pkg uninstaller
